# audio-extractor-gui

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD.md  README.md  activate.bat  activate.ps1  activate.sh  audio-extractor-ui.code-workspace  build_exe.ps1  build_exe.py  demo_gui.py  install_ffmpeg.bat  pyproject.toml  requirements-dev.txt  requirements.txt
release/: QUICK_START.md  README.md  USAGE.txt  install_ffmpeg.ps1
scripts/: build.py  quality.py  test.py
src/: main.py
src/audio_extractor_ui/: __init__.py  cli.py  core.py  gui.py  integration.py  main.py  utils.py
tests/: test_core.py
